# mcp-db-server

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  seed.py  server.py  test_server.py
.github/workflows/: python-publish.yml
db/: sqlite_repository.py
mcp_db/db/: mysql_repository.py  repository.py
mcp_db_server/: __init__.py
mcp_db_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
